fixed spacing between the sesion buttons.

--- a/client/src/containers/SessionTree/SessionTree.css
+++ b/client/src/containers/SessionTree/SessionTree.css
@@ -9,7 +9,7 @@
     display: flex;
     flex-direction: row;
     flex-flow: wrap;
-    justify-content: space-around;
+    justify-content: space-evenly;
 }
 
 .grey{
@@ -24,6 +24,7 @@
     justify-content: space-evenly;
     background-color: #9147FF;
     margin-top:36px;
+    margin-left:64px;
     color: whitesmoke;
     border-radius: 6px;
     border: black solid 1px;
